# DataVerse

./: .prettierrc  README.md
backend/: .gitignore  Cargo.toml  Dockerfile  vercel.json
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/errors/: auth_error.rs
backend/src/models/: datasets.rs  google_user_info.rs  mod.rs  transformation.rs  user.rs
backend/src/routes/: auth.rs  file.rs  mod.rs  transformation.rs
backend/src/services/: auth_service.rs  file_service.rs  mod.rs  transformation_service.rs
backend/src/utils/: jwt.rs  response.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/assets/: grains.jpg.avif
frontend/src/components/: BackgroundShapes.tsx  ColumnDetails.tsx  DatasetList.tsx  DatasetPreview.tsx  DatasetSingleComponent.tsx  FavoritesLeftNavBar.tsx  Footer.tsx  GridBackground.tsx  HeroSection.tsx  LeftNavBar.tsx  Navbar.tsx  TableComponent.tsx  TopBar.tsx
frontend/src/pages/: AuthPage.tsx  Dashboard.tsx  DatasetsPage.tsx  LandingPage.tsx  TransformationPage.tsx
frontend/src/services/: authService.ts  transformations.ts
