[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"          # For loading environment variables
log = "0.4"              # For logging
env_logger = "0.10"      # Environment-based logging configuration
actix-web = "4.0"        # Web framework for APIs
actix-cors = "0.6"       # CORS for frontend-backend communication
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres"] }