[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[dependencies]
dotenv = "0.15"          # For loading environment variables
log = "0.4"              # For logging
env_logger = "0.10"      # Environment-based logging configuration
actix-web = "4.0"
actix-multipart = "0.4"
futures = "0.3"
actix-cors = "0.6"       # CORS for frontend-backend communication
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "uuid", "postgres"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
diesel = { version = "2.0", features = ["postgres", "serde_json"] }
thiserror = "1.0"  # Add this line to include `thiserror`
bcrypt = "0.12"
jsonwebtoken = "9.3.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
supabase = "0.0.0"
tokio = { version = "1", features = ["full"] }
tokio-macros = "1.0"
futures-util = "0.3"
mime_guess = "2.0"